[gd_scene load_steps=17 format=3 uid="uid://dwq07dt6pmxma"]

[ext_resource type="Script" path="res://scripts/Tasks/fishing_task.gd" id="1_nfejs"]
[ext_resource type="PackedScene" uid="uid://dv4i70fuovtpb" path="res://assets/models/items/FishignRod.glb" id="2_nhxc6"]
[ext_resource type="Script" path="res://scripts/line.gd" id="3_rtant"]
[ext_resource type="Script" path="res://scripts/floating.gd" id="4_vhx3v"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7vaby"]
radius = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6oopk"]
height = 0.2
radius = 0.05

[sub_resource type="BoxShape3D" id="BoxShape3D_351xk"]
size = Vector3(2.86456, 1, 1.79443)

[sub_resource type="Animation" id="Animation_nnjx4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishingRod:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishingRod:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:line_thrown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g3p8e"]
resource_name = "throw"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishingRod:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.03333, 1.46667, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.167083, 2.54985, 0), Vector3(-0.167083, 2.54985, 0), Vector3(0, 0.38929, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishingRod:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2, 1.46667, 1.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 4.71239, 0), Vector3(1.26557, 2.16055, -2.54537), Vector3(1.26557, 2.16055, -2.54537), Vector3(0, 4.71239, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:line_thrown")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0666667, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y47u1"]
_data = {
"RESET": SubResource("Animation_nnjx4"),
"throw": SubResource("Animation_g3p8e")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hfrt5"]
albedo_color = Color(0.643985, 0, 0.0653918, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_h3xhw"]
material = SubResource("StandardMaterial3D_hfrt5")
radius = 0.1
height = 0.3
radial_segments = 8
rings = 4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wimtx"]
radius = 0.1
height = 0.3

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2uqsf"]
particle_flag_align_y = true
emission_shape_scale = Vector3(0.1, 0, 0.1)
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 1, 0)
spread = 15.0
initial_velocity_min = 1.0
initial_velocity_max = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8clyo"]
transparency = 4
albedo_color = Color(0.960784, 0.976471, 1, 0.917647)

[sub_resource type="SphereMesh" id="SphereMesh_kgajm"]
material = SubResource("StandardMaterial3D_8clyo")
radius = 0.03
height = 0.06
radial_segments = 8
rings = 4

[node name="Task" type="Area3D"]
collision_layer = 8
script = ExtResource("1_nfejs")

[node name="FishingRod" parent="." instance=ExtResource("2_nhxc6")]
transform = Transform3D(-3.61999e-06, 0, -1, 0, 1, 0, 1, 0, -3.61999e-06, 0, 0, 0)

[node name="Marker3D" type="Marker3D" parent="FishingRod"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0880514, 1.64111, -1.70721)

[node name="Skeleton3D" type="Skeleton3D" parent="FishingRod"]

[node name="PhysicalBone3D" type="PhysicalBone3D" parent="FishingRod/Skeleton3D"]
transform = Transform3D(0, 0, 1.77636e-15, 0, 1, 0, 0, 0, 1, 0, 1, 0)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
body_offset = Transform3D(0, 0, 8.88178e-16, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FishingRod/Skeleton3D/PhysicalBone3D"]
transform = Transform3D(1, 5.28977e-10, 1.90021e-09, -1.96571e-09, 0.187587, 0.982248, 1.63131e-10, -0.982248, 0.187587, -0.0868423, 0.243216, 0.421905)
shape = SubResource("CylinderShape3D_7vaby")

[node name="PhysicalBone3D2" type="PhysicalBone3D" parent="FishingRod/Skeleton3D"]
transform = Transform3D(1, 0, 1.5099e-14, 0, 1, 0, -1.5099e-14, 0, 1, 6.74918e-09, 1.43869, -0.565974)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.74919e-09, -1.43869, 0.565974)
body_offset = Transform3D(1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, 6.74918e-09, 1.43869, -0.565974)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FishingRod/Skeleton3D/PhysicalBone3D2"]
transform = Transform3D(1, 1.17566e-08, 9.92881e-09, -1.17566e-08, 0.167388, 0.985891, 9.92881e-09, -0.985891, 0.167388, -0.106018, 0.0391234, -0.0966909)
shape = SubResource("CylinderShape3D_6oopk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.683624, 1.05298, -0.0549316)
shape = SubResource("BoxShape3D_351xk")

[node name="fish_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y47u1")
}

[node name="FishingLine" type="Node3D" parent="."]
script = ExtResource("3_rtant")

[node name="Floaty" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.41758, 1.59976, -0.195324)
collision_layer = 16
collision_mask = 16
script = ExtResource("4_vhx3v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floaty"]
mesh = SubResource("CapsuleMesh_h3xhw")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floaty"]
shape = SubResource("CapsuleShape3D_wimtx")

[node name="Marker3D2" type="Marker3D" parent="Floaty"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00449753, 0.148744, 0.00451763)

[node name="FishPullTimer" type="Timer" parent="Floaty"]
wait_time = 0.8

[node name="PullParticles" type="GPUParticles3D" parent="Floaty"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0203192, 0.0337913)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_2uqsf")
draw_pass_1 = SubResource("SphereMesh_kgajm")

[node name="FishMoveTimer" type="Timer" parent="Floaty"]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="fish_timer" to="." method="_on_fish_timer_timeout"]
[connection signal="timeout" from="Floaty/FishPullTimer" to="Floaty" method="_on_fish_pull_timer_timeout"]
[connection signal="timeout" from="Floaty/FishMoveTimer" to="Floaty" method="_on_fish_move_timer_timeout"]
